# 2023-E-TRAINING

./: CMakeLists.txt  README.md
src/: opencv.py
test/: serial1.py  testcv.py
